ADD connect button, FIX URL encoding issue, START migration from deprecated methods